--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "watch": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,9 @@
     "cors": "^2.8.5",
     "csv-parse": "^4.15.4",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.12.13",
+    "morgan": "^1.10.0",
+    "pm2": "^5.0.0"
   },
   "devDependencies": {
     "jest": "^27.0.4",
